// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests should render Button disabled 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
    data-testid="button"
    disabled=""
    variant="primary"
  >
    <span
      class=""
    >
      fullWidth
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button link 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<a
    class="c0"
    data-testid="button"
    variant="primary"
  >
    <span
      class=""
    >
      button link
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button tests should render Button with icon 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
    data-testid="button"
    variant="primary"
  >
    <div
      class="c1"
      data-testid="icon-container"
      mr="0.5rem"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
    <span
      class=""
    >
      button icon
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button with onClick 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
    data-testid="button"
    variant="primary"
  >
    <span
      class=""
    >
      button link
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button with spinner 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  border-top: 0.1875rem solid #1E54B7;
  border-right: 0.1875rem solid #1E54B7;
  border-bottom: 0.1875rem solid #1E54B7;
  border-left: 0.1875rem solid #FFFFFF;
  animation: cilQsd 1.1s infinite linear;
}

.c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: fit-content;
  justify-content: center;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

.c1 {
  opacity: 0;
}

.c2 {
  position: absolute;
}

<button
    class="c0"
    data-testid="button"
    variant="primary"
  >
    <span
      class="c1"
    >
      fullWidth
    </span>
    <div
      class="c2"
    >
      <div
        bg="#1E54B7"
        class="c3"
        color="#FFFFFF"
        strokesize="3px"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button tests should render Button with styled system utilities 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  position: relative;
  border: none;
  display: flex;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  text-decoration: none;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  flex-direction: column;
  margin-bottom: 100px;
  width: fit-content;
}

.c0:hover:not(:active, :disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
    data-testid="button"
    flexdirection="column"
    mb="100"
    variant="primary"
  >
    <span
      class=""
    >
      button link
    </span>
  </button>
</DocumentFragment>
`;
